@@ -2,9 +2,12 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
   <groupId>org.scala-ide</groupId>
   <artifactId>org.scala-ide.scalatest.build</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
   <name>Build project for the scalatest support in Scala IDE</name>
   <packaging>pom</packaging>
 
@@ -17,53 +20,54 @@
   </modules>
 
   <properties>
-        <testProp>true</testProp>
     <encoding>UTF-8</encoding>
-    <tycho.version>0.12.0</tycho.version>
-    <repo.indigo>http://download.eclipse.org/releases/indigo/</repo.indigo>
-    <repo.ajdt>http://download.eclipse.org/tools/ajdt/37/dev/update</repo.ajdt>
+    <!-- p2 repositories location -->
+    <repo.eclipse.indigo>http://download.eclipse.org/releases/indigo/</repo.eclipse.indigo>
+    <repo.eclipse.juno>http://download.eclipse.org/eclipse/updates/4.2milestones</repo.eclipse.juno>
+    <repo.ajdt.indigo>http://download.eclipse.org/tools/ajdt/37/dev/update</repo.ajdt.indigo>
+    <repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
+
+    <!-- fixed versions -->
+    <tycho.version>0.14.1</tycho.version>
+    <scalatest-finders.version>0.9.1-SNAPSHOT</scalatest-finders.version>
+    <scala.plugin.version>3.0.2</scala.plugin.version>
+
+    <!-- tycho test related -->
+    <tycho.test.OSspecific></tycho.test.OSspecific>
+    <!-- Partial workaround against JDT Weaving deadlocks. See #1000317 and the original ticket on https://issuetracker.springsource.com/browse/STS-1445 -->
+    <tycho.test.weaving>-XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass -Dosgi.classloader.lock=classname</tycho.test.weaving>
+    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.headless ${tycho.test.weaving} ${tycho.test.OSspecific}</tycho.test.jvmArgs>
+
+    <!-- dependencies repos -->
+    <repo.eclipse>${repo.eclipse.indigo}</repo.eclipse>
+    <repo.ajdt>${repo.ajdt.indigo}</repo.ajdt>
+
     <!-- some default values, can be overwritten by profiles -->
     <scala.version>2.9.3-SNAPSHOT</scala.version>
     <version.suffix>2_09</version.suffix>
     <scala.version.short>2.9</scala.version.short>
     <version.tag>local</version.tag>
-    <repo.scala-ide>http://download.scala-ide.org/releases-29/stable/site</repo.scala-ide>
-  </properties>
+    <repo.scala-ide>${repo.scala-ide.root}/releases-29/stable/site</repo.scala-ide>
+    <scalacheck.id>scalacheck_2.9.0</scalacheck.id>
+    <scalacheck.version>1.9</scalacheck.version>
+    <scalatest.id>scalatest_2.9.0</scalatest.id>
+    <scalatest.version>2.0.M1</scalatest.version>
+    <specs.id>specs_2.9.0</specs.id>
+    <specs.version>1.6.8</specs.version>
+    <junit.version>4.10</junit.version>
+    <mockito.version>1.9.0</mockito.version>
+   </properties>
 
   <profiles>
     <profile>
       <!-- this is the default profile, using the stable builds-->
       <id>scala-ide-2.0-scala-2.9</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-enforcer-plugin</artifactId>
-            <version>1.0.1</version>
-            <executions>
-              <execution>
-                <id>enforce</id>
-                <phase>validate</phase>
-                <goals>
-                  <goal>enforce</goal>
-                </goals>
-                <configuration>
-                  <rules>
-                    <AlwaysFail/>
-                  </rules>
-                  <fail>true</fail>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
     <profile>
       <!-- nightly Scala IDE with Scala 2.9 -->
       <id>scala-ide-master-scala-2.9</id>
       <properties>
-        <repo.scala-ide>http://download.scala-ide.org/nightly-update-master-29x</repo.scala-ide>
+        <repo.scala-ide>${repo.scala-ide.root}/nightly-update-master-29x</repo.scala-ide>
       </properties>
     </profile>
     <profile>
@@ -73,8 +77,7 @@
         <scala.version>2.10.0-SNAPSHOT</scala.version>
         <version.suffix>2_10</version.suffix>
         <scala.version.short>2.10</scala.version.short>
-        <repo.scala-ide>http://download.scala-ide.org/nightly-update-master-trunk</repo.scala-ide>
-        <scala.2.10>true</scala.2.10>
+        <repo.scala-ide>${repo.scala-ide.root}/nightly-update-master-trunk</repo.scala-ide>
       </properties>
       <build>
         <plugins>
@@ -101,6 +104,37 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <!-- some configuration for tests run by tycho on Mac OS -->
+      <id>macOs</id>
+      <activation>
+        <os>
+          <family>mac</family>
+        </os>
+      </activation>
+      <properties>
+        <tycho.test.OSspecific>-Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.OSspecific>
+      </properties>
+       <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.eclipse.tycho</groupId>
+              <artifactId>tycho-surefire-plugin</artifactId>
+              <configuration>
+                <dependencies>
+                  <dependency>
+                    <artifactId>org.eclipse.jdt.launching.macosx</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                </dependencies>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
   </profiles>
 
   <!-- scm configuration is require to extract the github hash-->
@@ -109,9 +143,41 @@
     <url>https://github.com/skyluc/scalatest</url> 
   </scm>
 
-  <prerequisites>
-    <maven>3.0</maven>
-  </prerequisites>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-finders_2.9.0</artifactId>
+        <version>${scalatest-finders.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>${mockito.version}</version>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-tools.testing</groupId>
+        <artifactId>${scalacheck.id}</artifactId>
+        <version>${scalacheck.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scalatest</groupId>
+        <artifactId>${scalatest.id}</artifactId>
+        <version>${scalatest.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-tools.testing</groupId>
+        <artifactId>${specs.id}</artifactId>
+        <version>${specs.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <repositories>
     <repository>
@@ -139,7 +205,7 @@
       <id>Indigo</id>
       <name>Eclipse Indigo p2 repository</name>
       <layout>p2</layout>
-      <url>${repo.indigo}</url>
+      <url>${repo.eclipse}</url>
       <snapshots><enabled>false</enabled></snapshots>
     </repository>
     <repository>
@@ -150,47 +216,40 @@
       <snapshots><enabled>false</enabled></snapshots>
     </repository>
   </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>org.eclipse.tycho</id>
-      <name>Tycho snapshot repository</name>
-      <url>https://repository.sonatype.org/content/repositories/snapshots</url>
-      <snapshots>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>sonatype.release</id>
-      <name>Sonatype maven release repository</name>
-      <url>https://oss.sonatype.org/content/repositories/releases/</url>
-      <snapshots><enabled>false</enabled></snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>sonatype.snapshot</id>
-      <name>Sonatype maven snapshot repository</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </pluginRepository>
-  </pluginRepositories>
 
   <build>
-    <sourceDirectory>${basedir}/src</sourceDirectory>
-    <testSourceDirectory>${basedir}/test</testSourceDirectory>
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>2.4.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.4.3</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.1</version>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-surefire-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <configuration>
+            <useUIHarness>false</useUIHarness>
+            <useUIThread>false</useUIThread>
+  
+            <!-- Enable JDT weaving -->
+            <systemProperties combine.children="append">
+              <aj.weaving.verbose>true</aj.weaving.verbose>
+              <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo>
+              <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose>
+            </systemProperties>
+            <frameworkExtensions>
+              <frameworkExtension>
+                <groupId>p2.osgi.bundle</groupId>
+                <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
+                <version>1.0.200.I20120427-0800</version>
+              </frameworkExtension>
+            </frameworkExtensions>
+            <bundleStartLevel>
+              <bundle>
+                <id>org.eclipse.equinox.weaving.aspectj</id>
+                <level>2</level>
+                <autoStart>true</autoStart>
+              </bundle>
+            </bundleStartLevel>
+            <argLine>${tycho.test.jvmArgs}</argLine>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -203,11 +262,31 @@
       </plugin>
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
-        <artifactId>target-platform-configuration</artifactId>
+        <artifactId>tycho-compiler-plugin</artifactId>
         <version>${tycho.version}</version>
         <configuration>
-          <resolver>p2</resolver>
-          <pomDependencies>consider</pomDependencies>
+          <excludeResources>
+            <excludeResource>**/*.scala</excludeResource>
+          </excludeResources>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!-- configuration of the scala compiler -->
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>${scala.plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <jvmArgs>
+            <jvmArg>-Xms512m</jvmArg>
+            <jvmArg>-Xmx1024m</jvmArg>
+          </jvmArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -219,6 +298,19 @@
             <id>attach-source</id>
             <goals>
               <goal>plugin-source</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
